# uv_streamlit_app

./: pyproject.toml
src/uv_streamlit_app/: __init__.py  test.py
