[project]
name = "uv-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asad Waheed", email = "mrasadwaheed@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.42.2",
]

[project.scripts]
uv-streamlit-app = "uv_streamlit_app:main"
start = "uv_streamlit_app.test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
